Changed about me and trying to fix gapping

--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -1,5 +1,6 @@
 #Contact{
-    margin-top: 900px;
+    margin-top: 1200px;
+    margin-bottom: 100px;
 }
 
 .contact__container{
