--- a/frontend/src/components/Skills/Skills.css
+++ b/frontend/src/components/Skills/Skills.css
@@ -1,5 +1,5 @@
 #Skills{
-    margin-top: 50px;
+    margin-top: 150px;
 }
 
 .skills__container{
